--- a/.github/workflows/publish_helm.yml
+++ b/.github/workflows/publish_helm.yml
@@ -53,4 +53,5 @@ jobs:
         uses: J12934/helm-gh-pages-action@master
         with:
           access-token: ${{ secrets.GITHUB_TOKEN }}      
+          deploy-branch: main
       
