--- a/.github/workflows/publish_helm.yml
+++ b/.github/workflows/publish_helm.yml
@@ -52,6 +52,6 @@ jobs:
       - name: Publish Helm Package
         uses: J12934/helm-gh-pages-action@master
         with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}      
+          access-token: "${{ secrets.GITHUB_TOKEN }}" 
           deploy-branch: main
       
