--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -5,5 +5,7 @@ configMap:
   javaOpts: -Xss10m -Djna.debug_load=true -Dtkc.log.key=abc-123 -Depdg.log.level=9 -Duser.timezone=GMT -Dnetworkaddress.cache.ttl=60 -Xmx4G -Xms4G -XX:ActiveProcessorCount=3 -XX:-CreateMinidumpOnCrash -XX:-PrintGCDetails -XX:-HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxGCPauseMillis=50 -XX:InitiatingHeapOccupancyPercent=30 -XX:G1ReservePercent=20 -XX:ConcGCThreads=1
   myValue: helloWorld
 
-persistentVolume:
-  
+serviceAccount:
+  namespace: tst01
+  annotations:
+    clientId: abc123
