--- a/.github/workflows/publish_helm.yml
+++ b/.github/workflows/publish_helm.yml
@@ -86,7 +86,7 @@ jobs:
 
       - name: Package and push helm chart
         run: |
-          helm package ./charts --version ${{ steps.set-variables.outputs.VERSION }}
+          helm package ./charts/${{ env.IMAGE_NAME }} --version ${{ steps.set-variables.outputs.VERSION }}
           helm push ./${{ env.IMAGE_NAME }}-${{ steps.set-variables.outputs.VERSION }}.tgz oci://${{ steps.set-variables.outputs.REPOSITORY }}/charts          
 
       # - name: Publish Helm chart to GitHub Pages
