--- a/.github/workflows/publish_helm.yml
+++ b/.github/workflows/publish_helm.yml
@@ -64,6 +64,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0         
 
       - name: Set environment variables
         id: set-variables
