fix: moving chart to root dir

--- a/.github/workflows/publish_helm.yml
+++ b/.github/workflows/publish_helm.yml
@@ -67,8 +67,9 @@ jobs:
   
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"          
+        with:
           skip_packaging: true
           skip_upload: true
-          charts_dir: ./
+          charts_dir: "./"       
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"          
