--- a/.github/workflows/publish_helm.yml
+++ b/.github/workflows/publish_helm.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Package and push helm chart
         run: |
           helm package ./charts/${{ env.CHART_NAME }} --version ${{ steps.set-variables.outputs.VERSION }}
-          helm push ./${{ env.CHART_NAME }}-${{ steps.set-variables.outputs.VERSION }}.tgz oci://${{ steps.set-variables.outputs.REPOSITORY }}/charts          
+          helm push ./${{ env.CHART_NAME }}-${{ steps.set-variables.outputs.VERSION }}.tgz oci://${{ steps.set-variables.outputs.REPOSITORY }}          
 
       - name: Configure Git
         run: |
